[workspace]
resolver = "2"
members = [
    "rts",
    "gmap"
]

[workspace.dependencies]
bevy = "0.9"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3
